--- a/Pandas/firstclass/eda with training-Copy1.ipynb
+++ b/Pandas/firstclass/eda with training-Copy1.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "879f3d22",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "ec419a76",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "3528d50b",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "a7225c4c",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "04cd0a14",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "[20640 rows x 10 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "e14daf83",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "760af92b",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "55ac30e6",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "eef3c8d0",
    "metadata": {},
    "outputs": [
@@ -621,7 +621,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
+   "id": "b80dcf1e-3e69-499b-9213-313597259dd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(28.639486434108527)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing.housing_median_age.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ccf7d6b4-975e-4e6f-b261-04080e4b8503",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(29.0)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing.housing_median_age.median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "cf2c083c",
    "metadata": {},
    "outputs": [],
@@ -631,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "d80d8fa6",
    "metadata": {},
    "outputs": [
@@ -641,7 +683,7 @@
        "20640"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,17 +694,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "a9c22686",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([17640,  8290, 15088, ...,   799, 19444, 19050], dtype=int32)"
+       "array([14099, 19390,  2694, ...,   246,  7238, 12681], dtype=int32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "c5f757d0",
    "metadata": {},
    "outputs": [
@@ -683,7 +725,7 @@
        "120"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "f249d267",
    "metadata": {},
    "outputs": [
@@ -704,7 +746,7 @@
        "[3, 5, 6, 7]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "6a47a3bc",
    "metadata": {},
    "outputs": [],
@@ -732,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "fae4fc8b",
    "metadata": {},
    "outputs": [],
@@ -742,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "8ff9a050",
    "metadata": {},
    "outputs": [],
@@ -752,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "9055ef84",
    "metadata": {},
    "outputs": [
@@ -981,7 +1023,7 @@
        "[16512 rows x 10 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "e1cb280f",
    "metadata": {},
    "outputs": [
@@ -1221,7 +1263,7 @@
        "[16512 rows x 10 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "391e9b1f",
    "metadata": {},
    "outputs": [],
@@ -1243,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "id": "99a3c6f7",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1514,7 @@
        "[16512 rows x 10 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "c7356866",
    "metadata": {},
    "outputs": [],
@@ -1497,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "id": "9da4273b",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1549,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
