--- a/Course/lessons/9/lin_reg_part_1.ipynb
+++ b/Course/lessons/9/lin_reg_part_1.ipynb
@@ -1862,9 +1862,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hackthecart",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "hackthecart"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1876,7 +1876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
